<resources>
    <string name="app_name">My Quiz app</string>
    <string name="txtV_dang_nhap_1">Đăng nhập ngay để bắt đầu chơi</string>
    <string name="txtV_dang_nhap_2">Đăng nhập</string>
    <string name="btn_dang_nhap">Đăng nhập</string>
    <string name="txtV_dang_nhap_3">Chưa có tài khoản?</string>
    <string name="txtV_dang_nhap_4">Đăng ký ngay</string>
    <string name="txtV_dang_ky_1">Đăng ký tài khoản</string>
    <string name="btn_dang_ky">Đăng ký</string>
    <string name="txtV_dang_ky_2">Đã có tài khoản?</string>
    <string name="txtV_dang_ky_3">Đăng nhập</string>
    <string name="txtV_ket_qua_1">Tổng điểm: </string>
    <string name="btn_choi_lai">Chơi lại</string>
    <string name="btn_bang_xep_hang">Bảng xếp hạng</string>
</resources>