<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtV_dang_nhap_1"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/text_color"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtV_dang_nhap_2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="28sp"
        android:textColor="@color/text_color"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtGmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_dangnhap_white"
        android:hint="Nhập gmail đã đăng ký"
        android:inputType="textEmailAddress"
        android:padding="14dp"
        android:textColor="@color/text_color"
        android:textColorHint="#A3A3A3"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/edtPassLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/bg_dangnhap_white"
        android:hint="Mật khẩu"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textColor="@color/text_color"
        android:textColorHint="#A3A3A3"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:padding="14dp"
        android:text="@string/btn_dang_nhap"
        android:textColor="@color/text_color"
        android:backgroundTint="@color/button_color"
        android:textAllCaps="false"
        android:textSize="18sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_dang_nhap_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtV_dang_nhap_3"
            android:textSize="18sp"
            android:textColor="@color/text_color"/>

        <TextView
            android:id="@+id/txt_chua_co_tai_khoan"
            android:layout_toRightOf="@id/txt_dang_nhap_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtV_dang_nhap_4"
            android:textColor="@color/button_color"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </RelativeLayout>

</LinearLayout>